为集成jenkins添加路径

--- a/init/init_conf.yaml
+++ b/init/init_conf.yaml
@@ -1,7 +1,7 @@
 deviceName: 127.0.0.1:62001
 platformName: Android
 platformVersion: 5.1.1
-app: D:\appium_PO_kaoyan\app\kaoyan3.1.0.apk
+app: E:\脚本\appium_PO_kaoyan\app\kaoyan3.1.0.apk
 appPackage: com.tal.kaoyan
 appActivity: com.tal.kaoyan.ui.activity.SplashActivity
 noReset: False
